# ChangeLog for app-i18n/ibus
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/ibus/ChangeLog,v 1.126 2013/05/14 05:59:49 naota Exp $

  14 May 2013; Naohiro Aota <naota@gentoo.org> -ibus-1.5.1-r1.ebuild,
  -ibus-1.5.1-r2.ebuild, -ibus-1.5.1.ebuild:
  Drop old version.

*ibus-1.5.2 (04 May 2013)

  04 May 2013; Naohiro Aota <naota@gentoo.org> +ibus-1.5.2.ebuild:
  Version bump wrt #468348

  03 May 2013; Naohiro Aota <naota@gentoo.org> -ibus-1.4.99.20121006.ebuild:
  Drop old development version.

  03 May 2013; Naohiro Aota <naota@gentoo.org> ibus-1.4.1.ebuild,
  ibus-1.4.2.ebuild:
  Migrate to vala.eclass #463720

  05 Apr 2013; Naohiro Aota <naota@gentoo.org> ibus-1.5.1-r2.ebuild:
  Depend on gnome-base/gconf. #464562

*ibus-1.5.1-r2 (03 Apr 2013)

  03 Apr 2013; Naohiro Aota <naota@gentoo.org>
  +files/ibus-1.5.1-use-system-keyboard-layout.patch, +ibus-1.5.1-r2.ebuild:
  Add patch to respect system keyboard layout. #460796

*ibus-1.5.1-r1 (09 Feb 2013)

  09 Feb 2013; Naohiro Aota <naota@gentoo.org>
  +files/ibus-1.5.1-queue-events.patch, +files/ibus-1.5.1-setup.patch,
  +ibus-1.5.1-r1.ebuild:
  Add patch tof ix some upstreamed issues. #455614

*ibus-1.5.1 (05 Feb 2013)

  05 Feb 2013; Ben de Groot <yngwin@gentoo.org> +ibus-1.5.1.ebuild:
  version bump, bug #447188

  28 Jan 2013; Naohiro Aota <naota@gentoo.org>
  +files/ibus-1.4.1-libxslt-1.1.27.patch, ibus-1.4.1.ebuild, ibus-1.4.2.ebuild:
  Fix doc building. #442904

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> ibus-1.4.99.20121006.ebuild:
  Add ~sparc, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> ibus-1.4.99.20121006.ebuild:
  Add ~alpha, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> ibus-1.4.99.20121006.ebuild:
  Add ~ia64, wrt bug #449220

*ibus-1.4.99.20121006 (13 Oct 2012)

  13 Oct 2012;  <naota@gentoo.org> +ibus-1.4.99.20121006.ebuild, metadata.xml: